overlays/openshift/kfserving-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    kustomize.component: kfserving-models-web-app
    app.kubernetes.io/component: kfserving-models-web-app
  name: kfserving-models-web-app-new
spec:
  action: ALLOW
  selector:
    matchLabels:
      kustomize.component: kfserving-models-web-app
      app.kubernetes.io/component: kfserving-models-web-app
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
